# parallel_labs_2022

./: README.md
ekz/one/: CMakeLists.txt  main.cpp
ekz/two/: CMakeLists.txt  main.cpp
lab1/: CMakeLists.txt  task_1.cpp  task_1_modified.cpp  task_2.cpp
lab2/: CMakeLists.txt  task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp
lab3/: CMakeLists.txt  task_1.cpp  task_2.cpp  task_3.cpp
lab4/: CMakeLists.txt  task_1.cpp  task_3.cpp
lab5/: CMakeLists.txt  task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp
lab6/: CMakeLists.txt  task_1.cpp  task_3.cpp
lab7/: CMakeLists.txt  task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp
lab8/: CMakeLists.txt  task_1.cpp  task_2.cpp  testMatrix.txt
lab9/: CMakeLists.txt  task_1.cpp  task_2.cpp  task_2_modified.cpp
s2lab1/: CMakeLists.txt  example.cpp  task1.cpp  task2.cpp
s2lab2/: CMakeLists.txt  task1.cpp  task2.cpp
s2lab3/: CMakeLists.txt  example.cpp  task1.cpp
s2lab4/: CMakeLists.txt  task1.cpp
s2lab5/: CMakeLists.txt  task1.cpp
s2lab7/: task1.cpp
s2lab8/: CMakeLists.txt  task1.cpp  task2.cpp
